Replace endpoint/table with a generic locator in conndev_ObjectClass
Where an object class lives in the remote system — the resource endpoint for REST/SCIM, the table for
SQL — is semantically one concept, so the export carries one generic locator property instead of two
protocol-specific ones (ticket #11455 refinement). Consumers (midPoint forwarder, midPilot reader)
do not need to branch on the connector type.